# discord-webhook2

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: complex_embed.rs  delete_message.rs  edit_message.rs  get_message.rs  hello_world.rs  poll.rs  send_file.rs  simple_embed.rs
src/: error.rs  id.rs  lib.rs  webhook.rs
src/message/: emoji.rs  flags.rs  id.rs  mod.rs  poll.rs
src/message/embed/: author.rs  field.rs  footer.rs  image.rs  mod.rs  provider.rs  thumbnail.rs  video.rs
src/message/poll/: answer.rs  create.rs  layout_type.rs  media.rs  mod.rs
src/roles/: flags.rs  mod.rs  tags.rs
src/user/: avatar_decoration.rs  flags.rs  mod.rs  premium_type.rs
