[package]
name = "discord-webhook2"
version = "0.3.1"
edition = "2021"
authors = ["theaddonn <theaddonn@gmail.com>"]
readme = "README.md"
description = "Discord webhook api library"
repository = "https://github.com/Adrian8115/discord-webhook2"
license = "Apache-2.0"
keywords = ["discord", "discord-api", "webhook", "discord-webhook", "network"]
categories = ["network-programming", "api-bindings"]

[features]
default = []
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

reqwest = { version = "0.12", features = ["json", "multipart"] }
url = "2.5"

tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

iso8061-timestamp = "0.1"
