[package]
name = "discord-webhook2"
version = "0.4.2"
edition = "2021"
authors = ["theaddonn <theaddonn@gmail.com>"]
readme = "README.md"
description = "Discord webhook library"
repository = "https://github.com/theaddonn/discord-webhook2"
license = "Apache-2.0"
keywords = ["discord", "discord-api", "webhook", "discord-webhook", "network"]
categories = ["network-programming", "api-bindings"]

[features]
default = []
rustls-tls = ["reqwest/rustls-tls", "reqwest/json", "reqwest/multipart"]

[dependencies]
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
url = "2.5"

tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

iso8061-timestamp = "0.1"

[[example]]
name = "hello_world"

[[example]]
name = "get_message"

[[example]]
name = "edit_message"

[[example]]
name = "delete_message"

[[example]]
name = "simple_embed"

[[example]]
name = "complex_embed"

[[example]]
name = "poll"

[[example]]
name = "send_file"
